--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/base/normalize.css">
+    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/base.css">
 
-    <title>Online Zoo</title>
+
+    <title>PetStory Online</title>
 </head>
 <body>
-
+    <header>
+        <h1 class="logo">PetStory Online</h1>
+    </header>
 </body>
 </html>
