--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -6,14 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/styles/normalize.css">
-    <link rel="stylesheet" href="assets/styles/base.css">
+    <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
 
 
     <title>PetStory Online</title>
 </head>
 <body>
-    <header>
-        <h1 class="logo">PetStory Online</h1>
-    </header>
+    <div class="page">
+        <header class="header">
+            <div class="logo">
+                <h1>PetStory Online</h1>
+            </div>
+            <div class="navigation"></div>
+        </header>
+    </div>
 </body>
 </html>
