feat: watch section

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -7,18 +7,44 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/styles/normalize.css">
     <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
-
-
     <title>PetStory Online</title>
 </head>
 <body>
-    <div class="page">
-        <header class="header">
+<div class="page">
+    <header class="header">
+        <div class="container">
             <div class="logo">
-                <h1>PetStory Online</h1>
+                <div class="bamboo">
+                    <img src="assets/images/bamboo.svg" alt="bamboo logo">
+                </div>
+                <h1>PetStory <span>o</span>nline</h1>
             </div>
-            <div class="navigation"></div>
-        </header>
-    </div>
+            <div class="navigation">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="">About</a></li>
+                    <li class="nav-item"><a href="">Map</a></li>
+                    <li class="nav-item"><a href="">Zoos</a></li>
+                    <li class="nav-item"><a href="">Contact us</a></li>
+                    <li class="nav-item"><a href="">Designed by &copy;</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <section class="watch-online">
+      <div class="container">
+          <div class="wrapper">
+              <div class="round">
+                  <div class="tagline">
+                      Watch your <span>favorite</span> animal online
+                  </div>
+              </div>
+              <div class="button-watch">
+                  <a href="#">wath online</a>
+              </div>
+          </div>
+      </div>
+
+    </section>
+</div>
 </body>
 </html>
