feat: backstage section is done

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/styles/normalize.css">
+    <link rel="stylesheet" href="assets/styles/reset.css">
     <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
     <title>PetStory Online</title>
 </head>
@@ -14,18 +14,18 @@
     <header class="header">
         <div class="container">
             <div class="logo">
+                <h1>PetStory <span>o</span>nline</h1>
                 <div class="bamboo">
                     <img src="assets/images/bamboo.svg" alt="bamboo logo">
                 </div>
-                <h1>PetStory <span>o</span>nline</h1>
             </div>
             <div class="navigation">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="">About</a></li>
+                    <li class="nav-item"><a class="active" href="">About</a></li>
                     <li class="nav-item"><a href="">Map</a></li>
                     <li class="nav-item"><a href="">Zoos</a></li>
                     <li class="nav-item"><a href="">Contact us</a></li>
-                    <li class="nav-item"><a href="">Designed by &copy;</a></li>
+                    <li class="nav-item"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" title="designed by">Designed by &copy;</a></li>
                 </ul>
             </div>
         </div>
@@ -39,11 +39,33 @@
                   </div>
               </div>
               <div class="button-watch">
-                  <a href="#">wath online</a>
+                  <a class="watch-link"href="#">wath online</a>
               </div>
           </div>
       </div>
+    </section>
+    <section class="choose-animal">
+        <div class="backstage">
+            <div class="container">
+                <div class="instructions">
+                    <div class="backstage-img">
+                        <img src="assets/images/bamboo-cap.png" alt="man in bamboo cap">
+                    </div>
+                    <div class="backstage-text">
+                        <h2>The Backstage of the Wilderness World.</h2>
+                        <p class="about-site">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
 
+                        <h4>How it works </h4>
+                        <p class="goals">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="choose">
+            <div class="container">
+
+            </div>
+        </div>
     </section>
 </div>
 </body>
