--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/styles/reset.css">
+    <link rel="stylesheet" href="assets/styles/icon-font.css">
     <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
     <title>PetStory Online</title>
 </head>
@@ -61,10 +62,10 @@
                 </div>
             </div>
         </div>
-        <div class="choose">
-            <div class="container">
-
-            </div>
+        <div class="pets">
+            <div class="button button-left icon-arrow-left"></div>
+            <div class="container"></div>
+            <div class="button icon-arrow-right"></div>
         </div>
     </section>
 </div>
