feat: pets block using grid box

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -63,8 +63,97 @@
             </div>
         </div>
         <div class="pets">
-            <div class="button button-left icon-arrow-left"></div>
-            <div class="container"></div>
+            <div class="button icon-arrow-left"></div>
+            <div class="container pets-container">
+                <div class="cards">
+
+<!--cards-->
+<!--1-->
+                    <div class="card-item">
+                        <img  class="card-img" src="assets/images/pets-block/pandas.png" alt="pandas">
+                        <div class="card-info">
+                            <div class="text">
+                                <p class="type">Giant Pandas</p>
+                                <p class="area">Native to Southwest China</p>
+                            </div>
+                            <div class="card-icon">
+                                <img src="assets/images/icons/banana.svg" alt="banana">
+                            </div>
+                        </div>
+                    </div>
+
+<!--2-->
+                    <div class="card-item">
+                        <img  class="card-img" src="assets/images/pets-block/eagle.png" alt="eagle">
+                        <div class="card-info">
+                            <div class="text">
+                                <p class="type">Eagles</p>
+                                <p class="area">Native to South America</p>
+                            </div>
+                            <div class="card-icon">
+                                <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
+                            </div>
+                        </div>
+                    </div>
+<!--3-->
+                    <div class="card-item">
+                        <img  class="card-img" src="assets/images/pets-block/gorilla.png" alt="gorilla">
+                        <div class="card-info">
+                            <div class="text">
+                                <p class="type">Gorillas</p>
+                                <p class="area">Native to Congo</p>
+                            </div>
+                            <div class="card-icon">
+                                <img src="assets/images/icons/banana.svg" alt="banana">
+                            </div>
+                        </div>
+                    </div>
+<!--4-->
+                    <div class="card-item">
+                        <img  class="card-img" src="assets/images/pets-block/sloth.png" alt="sloth">
+                        <div class="card-info">
+                            <div class="text">
+                                <p class="type">Two-toed Sloth</p>
+                                <p class="area">Mesoamerica, South America</p>
+                            </div>
+                            <div class="card-icon">
+                                <img src="assets/images/icons/banana.svg" alt="banana">
+                            </div>
+                        </div>
+                    </div>
+<!--5-->
+                    <div class="card-item">
+                        <img  class="card-img" src="assets/images/pets-block/cheetahs.png" alt="cheetahs">
+                        <div class="card-info">
+                            <div class="text">
+                                <p class="type">cheetahs</p>
+                                <p class="area">Native to Africa</p>
+                            </div>
+                            <div class="card-icon">
+                                <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
+                            </div>
+                        </div>
+                    </div>
+<!--6-->
+                    <div class="card-item">
+                        <img  class="card-img" src="assets/images/pets-block/penguin.png" alt="penguins">
+                        <div class="card-info">
+                            <div class="text">
+                                <p class="type">Penguins</p>
+                                <p class="area">Native to Antarctica</p>
+                            </div>
+                            <div class="card-icon">
+                                <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                
+                <div>
+                    <a class="choose-button" href="#">Choose your favorite</a>
+                </div>
+            </div>
             <div class="button icon-arrow-right"></div>
         </div>
     </section>
