feat: added scale to pets imageges on hover

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -26,136 +26,151 @@
                     <li class="nav-item"><a href="">Map</a></li>
                     <li class="nav-item"><a href="">Zoos</a></li>
                     <li class="nav-item"><a href="">Contact us</a></li>
-                    <li class="nav-item"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" title="designed by">Designed by &copy;</a></li>
+                    <li class="nav-item"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
+                                            title="designed by">Designed by &copy;</a></li>
                 </ul>
             </div>
         </div>
     </header>
     <section class="watch-online">
-      <div class="container">
-          <div class="wrapper">
-              <div class="round">
-                  <div class="tagline">
-                      Watch your <span>favorite</span> animal online
-                  </div>
-              </div>
-              <div class="button-watch">
-                  <a class="watch-link"href="#">wath online</a>
-              </div>
-          </div>
-      </div>
+        <div class="container">
+            <div class="wrapper">
+                <div class="round">
+                    <div class="tagline">
+                        Watch your <span>favorite</span> animal online
+                    </div>
+                </div>
+                <div class="button-watch">
+                    <a class="watch-link" href="#">wath online</a>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="choose-animal">
         <div class="backstage">
             <div class="container">
                 <div class="instructions">
                     <div class="backstage-img">
-                        <img src="assets/images/bamboo-cap.png" alt="man in bamboo cap">
+                        <img class="bamboo-hat" src="assets/images/bamboo-cap.png" alt="man in bamboo cap">
                     </div>
                     <div class="backstage-text">
                         <h2>The Backstage of the Wilderness World.</h2>
-                        <p class="about-site">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+                        <p class="about-site">The site was founded on the basis of a volunteer movement to protect and
+                            care for animals.</p>
 
                         <h4>How it works </h4>
-                        <p class="goals">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
-                </div>
+                        <p class="goals">The main goal is to help the animals, as well as the nature reserves and zoos
+                            where they are kept. We are currently working on video projects targeting pandas in China,
+                            eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These
+                            have a total of more than 1,500 mammals and reptiles.</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="pets">
-            <div class="button icon-arrow-left"></div>
             <div class="container pets-container">
-                <div class="cards">
+                <div class="wrapper">
+                    <div class="cards-container">
+                        <div class="button icon-arrow-left"></div>
+                        <div class="cards">
+                            <!--cards-->
+                            <!--1-->
 
-<!--cards-->
-<!--1-->
-                    <div class="card-item">
-                        <img  class="card-img" src="assets/images/pets-block/pandas.png" alt="pandas">
-                        <div class="card-info">
-                            <div class="text">
-                                <p class="type">Giant Pandas</p>
-                                <p class="area">Native to Southwest China</p>
-                            </div>
-                            <div class="card-icon">
-                                <img src="assets/images/icons/banana.svg" alt="banana">
-                            </div>
-                        </div>
-                    </div>
 
+                            <div class="card-item">
+                                <div class="card-img card-1"></div>
+                                <div class="card-info">
+                                    <div class="text">
+                                        <p class="type">Giant Pandas</p>
+                                        <p class="area">Native to Southwest China</p>
+                                    </div>
+                                    <div class="card-icon">
+                                        <img src="assets/images/icons/banana.svg" alt="banana">
+                                    </div>
+                                </div>
+                            </div>
 <!--2-->
-                    <div class="card-item">
-                        <img  class="card-img" src="assets/images/pets-block/eagle.png" alt="eagle">
-                        <div class="card-info">
-                            <div class="text">
-                                <p class="type">Eagles</p>
-                                <p class="area">Native to South America</p>
+                            <div class="card-item">
+                                <div class="card-img card-2"></div>
+                                <div class="card-info">
+                                    <div class="text">
+                                        <p class="type">Eagles</p>
+                                        <p class="area">Native to South America</p>
+                                    </div>
+                                    <div class="card-icon">
+                                        <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-icon">
-                                <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
-                            </div>
-                        </div>
-                    </div>
 <!--3-->
-                    <div class="card-item">
-                        <img  class="card-img" src="assets/images/pets-block/gorilla.png" alt="gorilla">
-                        <div class="card-info">
-                            <div class="text">
-                                <p class="type">Gorillas</p>
-                                <p class="area">Native to Congo</p>
+                            <div class="card-item">
+                                <div class="card-img card-3"></div>
+                                <div class="card-info">
+                                    <div class="text">
+                                        <p class="type">Gorillas</p>
+                                        <p class="area">Native to Congo</p>
+                                    </div>
+                                    <div class="card-icon">
+                                        <img src="assets/images/icons/banana.svg" alt="banana">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-icon">
-                                <img src="assets/images/icons/banana.svg" alt="banana">
-                            </div>
-                        </div>
-                    </div>
 <!--4-->
-                    <div class="card-item">
-                        <img  class="card-img" src="assets/images/pets-block/sloth.png" alt="sloth">
-                        <div class="card-info">
-                            <div class="text">
-                                <p class="type">Two-toed Sloth</p>
-                                <p class="area">Mesoamerica, South America</p>
+                            <div class="card-item">
+                                <div class="card-img card-4"></div>
+                                <div class="card-info">
+                                    <div class="text">
+                                        <p class="type">Two-toed Sloth</p>
+                                        <p class="area">Mesoamerica, South America</p>
+                                    </div>
+                                    <div class="card-icon">
+                                        <img src="assets/images/icons/banana.svg" alt="banana">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-icon">
-                                <img src="assets/images/icons/banana.svg" alt="banana">
-                            </div>
-                        </div>
-                    </div>
 <!--5-->
-                    <div class="card-item">
-                        <img  class="card-img" src="assets/images/pets-block/cheetahs.png" alt="cheetahs">
-                        <div class="card-info">
-                            <div class="text">
-                                <p class="type">cheetahs</p>
-                                <p class="area">Native to Africa</p>
+                            <div class="card-item">
+                                <div class="card-img card-5"></div>
+                                <div class="card-info">
+                                    <div class="text">
+                                        <p class="type">cheetahs</p>
+                                        <p class="area">Native to Africa</p>
+                                    </div>
+                                    <div class="card-icon">
+                                        <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-icon">
-                                <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
-                            </div>
-                        </div>
-                    </div>
 <!--6-->
-                    <div class="card-item">
-                        <img  class="card-img" src="assets/images/pets-block/penguin.png" alt="penguins">
-                        <div class="card-info">
-                            <div class="text">
-                                <p class="type">Penguins</p>
-                                <p class="area">Native to Antarctica</p>
+                            <div class="card-item">
+                                <div class="card-img card-6"></div>
+                                <div class="card-info">
+                                    <div class="text">
+                                        <p class="type">Penguins</p>
+                                        <p class="area">Native to Antarctica</p>
+                                    </div>
+                                    <div class="card-icon">
+                                        <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="card-icon">
-                                <img src="assets/images/icons/meat-fish.svg" alt="meat and fish">
-                            </div>
-                        </div>
-                    </div>
 
+
+
+
+                        </div>
+                        <div class="button icon-arrow-right"></div>
+                    </div>
                 </div>
-                
-                <div>
+                <div class="button-choose-pet">
                     <a class="choose-button" href="#">Choose your favorite</a>
                 </div>
             </div>
-            <div class="button icon-arrow-right"></div>
+
         </div>
+    </section>
+    <section class="pick-feed">
+
     </section>
 </div>
 </body>
