feat: complete feedback section

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -25,6 +25,7 @@
                     <li class="nav-item"><a class="active" href="">About</a></li>
                     <li class="nav-item"><a href="">Map</a></li>
                     <li class="nav-item"><a href="">Zoos</a></li>
+                    <li class="nav-item"><a href="">Donate</a></li>
                     <li class="nav-item"><a href="">Contact us</a></li>
                     <li class="nav-item"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
                                             title="designed by">Designed by &copy;</a></li>
@@ -69,7 +70,7 @@
         </div>
         <div class="pets">
             <div class="container pets-container">
-                <div class="wrapper">
+                <div class="pets-wrapper">
                     <div class="cards-container">
                         <div class="button icon-arrow-left"></div>
                         <div class="cards">
@@ -170,7 +171,187 @@
         </div>
     </section>
     <section class="pick-feed">
+        <div class="container">
+            <div class="pick-info">
+                <h2>Pick and feed a friend</h2>
+                <div class="description">
+                    <h4>We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
+                    <p class="subtitle-1">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PatStory.</p>
+                    <p class="subtitle-2">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider</p>
+                    <p class="subtitle-3"> a gift to our <a href="#">Emergency Support Fund</a> . </p>
+                </div>
+            </div>
+            <div class="pick-instruction">
+                <h3>How it works</h3>
+                <div class="process">
+                    <div class="process-card">
+                        <div class="icon">
+                            <img src="assets/images/icons/pay.svg" alt="you pay">
+                        </div>
+                        <p class="subtitle">Pay with card</p>
+                    </div>
+                    <div class="arrow">
+                        <img src="assets/images/icons/arrow.svg" alt="arrow right">
+                    </div>
+                    <div class="process-card">
+                        <div class="icon">
+                            <img src="assets/images/icons/money-tree.svg" alt="money goes to zoo">
+                        </div>
+                        <p class="subtitle">Payment goes to the zoo</p>
+                    </div>
+                    <div class="arrow">
+                        <img src="assets/images/icons/arrow.svg" alt="arrow right">
+                    </div>
+                    <div class="process-card">
+                        <div class="icon">
+                            <img src="assets/images/icons/monkey.svg" alt="animals eat">
+                        </div>
+                        <p class="subtitle">Your favourite animal gets delicious dish</p>
+                    </div>
+                </div>
+            </div>
+            <div class="pick-button">
+                <a class="button-feed" href="#">Feed a friend now</a>
+            </div>
+        </div>
+    </section>
 
+<!--    TESTIMONIALS-->
+
+    <section class="testimonials">
+        <div class="testimonials-container container">
+            <h3>Testimonials</h3>
+            <div class="cards">
+
+
+<!--CARDS-->
+
+                <div class="feedback-card-container">
+                    <div class="feed-card">
+                        <div class="feed-card-info">
+                            <div class="user-pic pic-1"></div>
+                            <div class="text-information">
+                                <p class="name">
+                                    Michael John
+                                </p>
+                                <div class="country-date">
+                                    <div class="country">
+                                        <p>Local Austria</p>
+                                    </div>
+                                    <div class="dot">
+
+                                    </div>
+                                    <p>Today</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-text">
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            <br>
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                        </p>
+                    </div>
+                </div>
+
+<!--2-->
+
+                <div class="feedback-card-container">
+                    <div class="feed-card">
+                        <div class="feed-card-info">
+                            <div class="user-pic pic-2"></div>
+                            <div class="text-information">
+                                <p class="name">
+                                    Oskar Samborsky
+                                </p>
+                                <div class="country-date">
+                                    <div class="country">
+                                        <p>Local Austria</p>
+                                    </div>
+                                    <div class="dot">
+
+                                    </div>
+                                    <p>Yesterday</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-text">
+                            Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                            <br>
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                    </div>
+                </div>
+
+<!--3-->
+
+                <div class="feedback-card-container">
+                    <div class="feed-card">
+                        <div class="feed-card-info">
+                            <div class="user-pic pic-3"></div>
+                            <div class="text-information">
+                                <p class="name">
+                                    Fredericka Michelin
+                                </p>
+                                <div class="country-date">
+                                    <div class="country">
+                                        <p>Local Austria</p>
+                                    </div>
+                                    <div class="dot">
+
+                                    </div>
+                                    <p>Yesterday</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-text">
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            <br>
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            <br>
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                        </p>
+                    </div>
+                </div>
+
+<!--4-->
+
+                <div class="feedback-card-container">
+                    <div class="feed-card">
+                        <div class="feed-card-info">
+                            <div class="user-pic pic-4"></div>
+                            <div class="text-information">
+                                <p class="name">
+                                    Mila Riksha
+                                </p>
+                                <div class="country-date">
+                                    <div class="country">
+                                        <p>Local Austria</p>
+                                    </div>
+                                    <div class="dot">
+
+                                    </div>
+                                    <p>Yesterday</p>
+                                </div>
+                            </div>
+                        </div>
+                        <p class="card-text">
+                            My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                        </p>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+            <div class="scroll-bar">
+                <div class="scroll"></div>
+            </div>
+            <div class="testimonials-button">
+                <a href="#" class="feedback-button">Leave feedback</a>
+            </div>
+        </div>
     </section>
 </div>
 </body>
