feat: added footer elements

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -6,7 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/styles/reset.css">
-    <link rel="stylesheet" href="assets/styles/icon-font.css">
     <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
     <title>PetStory Online</title>
 </head>
@@ -15,7 +14,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <h1>PetStory <span>o</span>nline</h1>
+                <h1 class="logo-header">PetStory <span>o</span>nline</h1>
                 <div class="bamboo">
                     <img src="assets/images/bamboo.svg" alt="bamboo logo">
                 </div>
@@ -353,6 +352,67 @@
             </div>
         </div>
     </section>
+
+
+<!--    FOOTER-->
+
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <h2 class="logo-header">PetStory <span>o</span>nline</h2>
+                <div class="bamboo">
+                    <img src="assets/images/bamboo.svg" alt="bamboo logo">
+                </div>
+            </div>
+
+            <div class="donate-footer-button">
+                <a href="#" class="donate-footer">donate for volunteers</a>
+            </div>
+
+            <div class="social-media-list">
+                <ul>
+                    <li class="soc-media-item">
+                        <div class="soc-media-item-icon icon-facebook"></div>
+                        <p class="soc-media-title">Facebook</p>
+                    </li>
+                    <li class="soc-media-item">
+                        <div class="soc-media-item-icon icon-twitter"></div>
+                        <p class="soc-media-title">Twitter</p>
+                    </li>
+                    <li class="soc-media-item">
+                        <div class="soc-media-item-icon icon-instagram"></div>
+                        <p class="soc-media-title">Instagram</p>
+                    </li>
+                    <li class="soc-media-item">
+                        <div class="soc-media-item-icon icon-youtube"></div>
+                        <p class="soc-media-title">YouTube</p>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="navigation">
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="active" href="">About</a></li>
+                    <li class="nav-item"><a href="">Map</a></li>
+                    <li class="nav-item"><a href="">Zoos</a></li>
+                    <li class="nav-item"><a href="">Contact us</a></li>
+                </ul>
+            </div>
+
+            <div class="subscribe">
+                <p>Subscribe to our news</p>
+                <div class="email">
+                    <input class="input-email input" type="email" name="email" id="email" placeholder="Enter your email">
+                    <input class="input-submit input" type="submit" value="Submit">
+                </div>
+            </div>
+
+            <div class="copyright">
+                <p>Designed by Alisa Samborskaya</p>
+                <p>&copy;RSSchool & &copy;Yem Digital 2021</p>
+            </div>
+
+    </footer>
 </div>
 </body>
 </html>
