fix: arrows at pets slider

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -71,7 +71,11 @@
             <div class="container pets-container">
                 <div class="pets-wrapper">
                     <div class="cards-container">
-                        <div class="button icon-arrow-left"></div>
+                        <div class="button">
+                            <div class="icon-arrow-left">
+                                <img src="assets/images/icons/arrow-small.svg" alt="arrow left">
+                            </div>
+                        </div>
                         <div class="cards">
                             <!--cards-->
                             <!--1-->
@@ -159,7 +163,11 @@
 
 
                         </div>
-                        <div class="button icon-arrow-right"></div>
+                        <div class="button">
+                            <div class="icon-arrow-right">
+                                <img src="assets/images/icons/arrow-small.svg" alt="arrow right">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="button-choose-pet">
