--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/styles/reset.css">
+    <link rel="stylesheet" href="assets/fonts/icon-font.css">
     <link rel="stylesheet" href="assets/sass-css/pages/main-page.css">
     <title>PetStory Online</title>
 </head>
@@ -13,19 +14,19 @@
 <div class="page">
     <header class="header">
         <div class="container">
-            <div class="logo">
+            <a class="logo" id="start-page">
                 <h1 class="logo-header">PetStory <span>o</span>nline</h1>
                 <div class="bamboo">
                     <img src="assets/images/bamboo.svg" alt="bamboo logo">
                 </div>
-            </div>
+            </a>
             <div class="navigation">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="active" href="">About</a></li>
-                    <li class="nav-item"><a href="">Map</a></li>
-                    <li class="nav-item"><a href="">Zoos</a></li>
-                    <li class="nav-item"><a href="">Donate</a></li>
-                    <li class="nav-item"><a href="">Contact us</a></li>
+                    <li class="nav-item"><a class="active" href="#">About</a></li>
+                    <li class="nav-item"><a href="#">Map</a></li>
+                    <li class="nav-item"><a href="#">Zoos</a></li>
+                    <li class="nav-item"><a href="#">Donate</a></li>
+                    <li class="nav-item"><a href="#">Contact us</a></li>
                     <li class="nav-item"><a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online"
                                             title="designed by">Designed by &copy;</a></li>
                 </ul>
@@ -82,7 +83,9 @@
 
 
                             <div class="card-item">
-                                <div class="card-img card-1"></div>
+                                <div class="card-img-container">
+                                    <div class="card-img card-1"></div>
+                                </div>
                                 <div class="card-info">
                                     <div class="text">
                                         <p class="type">Giant Pandas</p>
@@ -93,9 +96,12 @@
                                     </div>
                                 </div>
                             </div>
-<!--2-->
+
+                            <!--2-->
                             <div class="card-item">
-                                <div class="card-img card-2"></div>
+                                <div class="card-img-container">
+                                    <div class="card-img card-2"></div>
+                                </div>
                                 <div class="card-info">
                                     <div class="text">
                                         <p class="type">Eagles</p>
@@ -106,9 +112,11 @@
                                     </div>
                                 </div>
                             </div>
-<!--3-->
+                            <!--3-->
                             <div class="card-item">
-                                <div class="card-img card-3"></div>
+                                <div class="card-img-container">
+                                    <div class="card-img card-3"></div>
+                                </div>
                                 <div class="card-info">
                                     <div class="text">
                                         <p class="type">Gorillas</p>
@@ -119,9 +127,11 @@
                                     </div>
                                 </div>
                             </div>
-<!--4-->
+                            <!--4-->
                             <div class="card-item">
-                                <div class="card-img card-4"></div>
+                                <div class="card-img-container">
+                                    <div class="card-img card-4"></div>
+                                </div>
                                 <div class="card-info">
                                     <div class="text">
                                         <p class="type">Two-toed Sloth</p>
@@ -132,9 +142,11 @@
                                     </div>
                                 </div>
                             </div>
-<!--5-->
+                            <!--5-->
                             <div class="card-item">
-                                <div class="card-img card-5"></div>
+                                <div class="card-img-container">
+                                    <div class="card-img card-5"></div>
+                                </div>
                                 <div class="card-info">
                                     <div class="text">
                                         <p class="type">cheetahs</p>
@@ -145,9 +157,11 @@
                                     </div>
                                 </div>
                             </div>
-<!--6-->
+                            <!--6-->
                             <div class="card-item">
-                                <div class="card-img card-6"></div>
+                                <div class="card-img-container">
+                                    <div class="card-img card-6"></div>
+                                </div>
                                 <div class="card-info">
                                     <div class="text">
                                         <p class="type">Penguins</p>
@@ -158,8 +172,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
 
 
                         </div>
@@ -183,8 +195,10 @@
                 <h2>Pick and feed a friend</h2>
                 <div class="description">
                     <h4>We know the animals bring you joy, and in these extraordinary times, we’re glad.</h4>
-                    <p class="subtitle-1">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PatStory.</p>
-                    <p class="subtitle-2">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider</p>
+                    <p class="subtitle-1">During a time when the COVID-19 epidemic is touching all of our lives, we’re
+                        proud and glad that people around the world find joy in PatStory.</p>
+                    <p class="subtitle-2">Even though the zoo has reopened, we need you now more than ever to help us
+                        deal with these problems. Please consider</p>
                     <p class="subtitle-3"> a gift to our <a href="#">Emergency Support Fund</a> . </p>
                 </div>
             </div>
@@ -223,15 +237,16 @@
         </div>
     </section>
 
-<!--    TESTIMONIALS-->
+    <!--    TESTIMONIALS-->
 
     <section class="testimonials">
         <div class="testimonials-container container">
             <h3>Testimonials</h3>
+            <p class="test">S</p>
             <div class="cards">
 
 
-<!--CARDS-->
+                <!--CARDS-->
 
                 <div class="feedback-card-container">
                     <div class="feed-card">
@@ -253,15 +268,20 @@
                             </div>
                         </div>
                         <p class="card-text">
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.
                             <br>
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son
+                            delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love
+                            for animals.
                         </p>
                     </div>
                 </div>
 
-<!--2-->
+                <!--2-->
 
                 <div class="feedback-card-container">
                     <div class="feed-card">
@@ -283,13 +303,19 @@
                             </div>
                         </div>
                         <p class="card-text">
-                            Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                            Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                            son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a
+                            love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch
+                            gouillas.
                             <br>
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son
+                            delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love
+                            for animals.
                     </div>
                 </div>
 
-<!--3-->
+                <!--3-->
 
                 <div class="feedback-card-container">
                     <div class="feed-card">
@@ -311,16 +337,21 @@
                             </div>
                         </div>
                         <p class="card-text">
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.
                             <br>
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.
                             <br>
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son
+                            delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love
+                            for animals.
                         </p>
                     </div>
                 </div>
 
-<!--4-->
+                <!--4-->
 
                 <div class="feedback-card-container">
                     <div class="feed-card">
@@ -342,13 +373,19 @@
                             </div>
                         </div>
                         <p class="card-text">
-                            My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
-                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill
+                            a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch
+                            gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo
+                            I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways
+                            to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves
+                            to watch gouillas.
+                            The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                            is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son
+                            delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love
+                            for animals.
                         </p>
                     </div>
                 </div>
-
-
 
 
             </div>
@@ -362,16 +399,16 @@
     </section>
 
 
-<!--    FOOTER-->
+    <!--    FOOTER-->
 
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <div class="logo">
+            <a class="footer-logo logo" href="#start-page">
                 <h2 class="logo-header">PetStory <span>o</span>nline</h2>
                 <div class="bamboo">
                     <img src="assets/images/bamboo.svg" alt="bamboo logo">
                 </div>
-            </div>
+            </a>
 
             <div class="donate-footer-button">
                 <a href="#" class="donate-footer">donate for volunteers</a>
@@ -380,25 +417,33 @@
             <div class="social-media-list">
                 <ul>
                     <li class="soc-media-item">
-                        <div class="soc-media-item-icon icon-facebook"></div>
-                        <p class="soc-media-title">Facebook</p>
+                        <a class="soc-link" href="https://www.facebook.com/">
+                            <div class="soc-media-item-icon icon-facebook"></div>
+                            <p class="soc-media-title">Facebook</p>
+                        </a>
                     </li>
                     <li class="soc-media-item">
-                        <div class="soc-media-item-icon icon-twitter"></div>
-                        <p class="soc-media-title">Twitter</p>
+                        <a class="soc-link" href="https://twitter.com/">
+                            <div class="soc-media-item-icon icon-twitter"></div>
+                            <p class="soc-media-title">Twitter</p>
+                        </a>
                     </li>
                     <li class="soc-media-item">
-                        <div class="soc-media-item-icon icon-instagram"></div>
-                        <p class="soc-media-title">Instagram</p>
+                        <a class="soc-link" href="https://www.instagram.com/">
+                            <div class="soc-media-item-icon icon-instagram"></div>
+                            <p class="soc-media-title">Instagram</p>
+                        </a>
                     </li>
                     <li class="soc-media-item">
-                        <div class="soc-media-item-icon icon-youtube"></div>
-                        <p class="soc-media-title">YouTube</p>
+                        <a class="soc-link" href="https://www.youtube.com/">
+                            <div class="soc-media-item-icon icon-youtube"></div>
+                            <p class="soc-media-title">YouTube</p>
+                        </a>
                     </li>
                 </ul>
             </div>
 
-            <div class="navigation">
+            <div class="navigation-footer">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="active" href="">About</a></li>
                     <li class="nav-item"><a href="">Map</a></li>
@@ -410,8 +455,9 @@
             <div class="subscribe">
                 <p>Subscribe to our news</p>
                 <div class="email">
-                    <input class="input-email input" type="email" name="email" id="email" placeholder="Enter your email">
-                    <input class="input-submit input" type="submit" value="Submit">
+                    <input class="input-email input" type="email" name="email" id="email"
+                           placeholder="Enter your email">
+                    <input class="input-submit input mistake-submit" type="submit" value="Submit">
                 </div>
             </div>
 
@@ -419,8 +465,10 @@
                 <p>Designed by Alisa Samborskaya</p>
                 <p>&copy;RSSchool & &copy;Yem Digital 2021</p>
             </div>
+        </div>
 
     </footer>
 </div>
+<script src="pages/main/script.js"></script>
 </body>
 </html>
