fix: submit-button states

--- a/online-zoo/index.html
+++ b/online-zoo/index.html
@@ -457,7 +457,7 @@
                 <div class="email">
                     <input class="input-email input" type="email" name="email" id="email"
                            placeholder="Enter your email">
-                    <input class="input-submit input mistake-submit" type="submit" value="Submit">
+                    <input class="input-submit input default-submit" type="submit" value="Submit">
                 </div>
             </div>
 
